examples/test/testpolicy13720.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13720
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key44: value46
      key36: value7
      key24: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value24
          key23: value1
      podSelector:
        matchLabels:
          key38: value48
